--- a/T-Shop.Client.MVC/Views/_ViewImports.cshtml
+++ b/T-Shop.Client.MVC/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using T_Shop.Client.MVC
 @using T_Shop.Client.MVC.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, T-Shop.WebClient.MVC
