--- a/T-Shop.Client.MVC/Views/Shared/_Layout.cshtml
+++ b/T-Shop.Client.MVC/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@using T_Shop.Shared.DTOs.User.ResponseModels
+@{
+    var currentUser = ViewContext.HttpContext.Items["CurrentUser"] as UserResponseModel;
+}
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -66,7 +71,7 @@
                     <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars text-primary"></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
                         <div class="navbar-nav mx-auto">
                         <a href="/" style="font-size: 20px; font-weight: 900" class="nav-item nav-link active">Home</a>
                         <a href="/product" style="font-size: 20px; font-weight: 900" class="nav-item nav-link">Products</a>
@@ -79,23 +84,23 @@
                             <a style="font-size: 20px; font-weight: 900" href="contact" class="nav-item nav-link">Contact</a>
                         </div>
                         <div class="d-flex m-3 me-0">
-                           <a href="/cart" class="position-relative me-4 my-auto">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="black" class="bi bi-cart cartbtn" viewBox="0 0 16 16">
-                                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                            </svg>
-                            <span class="position-absolute rounded-circle d-flex align-items-center justify-content-center text-dark px-1" style="top: -5px; left: 15px; height: 20px; min-width: 20px; background-color: #edebeb">3</span>
-                            </a>
+                           <vc:cart>
 
+                           </vc:cart>
 
-                        <a href="#" class="my-auto" style="color: black">
-                                <i class="fas fa-user fa-2x"></i>
-                            </a>
+                            <vc:user>
+
+                            </vc:user>
+                      
+
+                        
                         </div>
                     </div>
                 </nav>
             </div>
         </div>
         <!-- Navbar End -->
+     
     <div>
         <main role="main" class="pb-3">
             @RenderBody()
