--- a/T-Shop.Client.MVC/Views/Product/Index.cshtml
+++ b/T-Shop.Client.MVC/Views/Product/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using T_Shop.Shared.DTOs.Product.ResponseModel
-@using T_Shop.Shared.ViewModels.ProductsPage
+﻿@using T_Shop.Shared.ViewModels.ProductsPage
 @model ProductVM
 
 @{
@@ -8,12 +7,7 @@
 
 <!-- Single Page Header start -->
 <div class="container-fluid page-header py-5">
-    <h1 class="text-center text-white display-6">Shop</h1>
-    <ol class="breadcrumb justify-content-center mb-0">
-        <li class="breadcrumb-item"><a href="#">Home</a></li>
-        <li class="breadcrumb-item"><a href="#">Pages</a></li>
-        <li class="breadcrumb-item active text-white">Shop</li>
-    </ol>
+    <h1 class="text-center text-white display-6">Products</h1>
 </div>
 <!-- Single Page Header End -->
 <!-- Fruits Shop Start-->
