--- a/T-Shop.Client.MVC/Views/Shared/Components/User/Default.cshtml
+++ b/T-Shop.Client.MVC/Views/Shared/Components/User/Default.cshtml
@@ -4,7 +4,7 @@
 
 @if (Model == null)
 {
-    <a class="btn btn-primary" asp-action="Login" asp-controller="Authentication">Login</a>
+    <a class="btn btn-light hover-onClick" asp-action="Login" asp-controller="Authentication">Login</a>
 }
 else
 {
