--- a/T-Shop.Client.MVC/Views/Home/Index.cshtml
+++ b/T-Shop.Client.MVC/Views/Home/Index.cshtml
@@ -44,8 +44,8 @@
 </div>
 <!-- Hero End -->
 <!-- Featurs Section Start -->
-<div class="container-fluid featurs py-5">
-    <div class="container py-5">
+<div class="container-fluid featurs">
+    <div class="container py-2">
         <div class="row g-4">
             <div class="col-md-6 col-lg-3">
                 <div class="featurs-item text-center rounded bg-light p-4">
@@ -620,27 +620,20 @@
 </div>
 <!-- Vesitable Shop End -->
 <!-- Banner Section Start-->
-<div class="container-fluid banner bg-secondary my-5">
+<div class="container-fluid banner bg-gradient-1 my-5">
     <div class="container py-5">
         <div class="row g-4 align-items-center">
             <div class="col-lg-6">
                 <div class="py-4">
-                    <h1 class="display-3 text-white">Fresh Exotic Fruits</h1>
-                    <p class="fw-normal display-3 text-dark mb-4">in Our Store</p>
-                    <p class="mb-4 text-dark">The generated Lorem Ipsum is therefore always free from repetition injected humour, or non-characteristic words etc.</p>
-                    <a href="#" class="banner-btn btn border-2 border-white rounded-pill text-dark py-3 px-5">BUY</a>
+                    <h1 class="display-3 text-white">Premium Luxury Cars</h1>
+                    <p class="fw-normal display-3 text-white mb-4">at Our Dealership</p>
+                    <p class="mb-4 text-white">The curated collection of luxury cars ensures an unparalleled driving experience, with impeccable style, advanced features, and top-notch performance.</p>
+                    <a asp-action="index" asp-controller="product" class="banner-btn btn border-2 border-white rounded-pill text-dark py-3 px-5 text-white">BUY NOW</a>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="position-relative">
-                    <img src="img/baner-1.png" class="img-fluid w-100 rounded" alt="">
-                    <div class="d-flex align-items-center justify-content-center bg-white rounded-circle position-absolute" style="width: 140px; height: 140px; top: 0; left: 0;">
-                        <h1 style="font-size: 100px;">1</h1>
-                        <div class="d-flex flex-column">
-                            <span class="h2 mb-0">50$</span>
-                            <span class="h4 text-muted mb-0">kg</span>
-                        </div>
-                    </div>
+                    <img src="~/Theme//img/pageHeader.jpg" class="img-fluid w-100 rounded" alt="">
                 </div>
             </div>
         </div>
