--- a/T-Shop.Client.MVC/Views/Shared/_Layout.cshtml
+++ b/T-Shop.Client.MVC/Views/Shared/_Layout.cshtml
@@ -81,9 +81,16 @@
                             <a style="font-size: 20px; font-weight: 900" href="contact" class="nav-item nav-link">Contact</a>
                         </div>
                         <div class="d-flex m-3 me-0">
-                           <vc:cart>
+                        @{
+                            var isUserLogin = User.Identity.IsAuthenticated;
+                            if(isUserLogin)
+                            {
+                                <vc:cart>
 
-                           </vc:cart>
+                                </vc:cart>
+                            }
+                        }
+                          
 
                             <vc:user>
 
