--- a/T-Shop.Client.MVC/Views/Order/Index.cshtml
+++ b/T-Shop.Client.MVC/Views/Order/Index.cshtml
@@ -88,7 +88,7 @@
         </div>
 
         @* Payment *@
-        <div class="d-flex align-content-center justify-content-center" style="width: 100%">
+        <div class="d-flex align-content-center justify-content-center pt-2" style="width: 100%">
             <div class="d-flex flex-column bg-light rounded py-3">
                 <h2 class="text-center fw-bold">Payment</h2> 
                 <div id="checkout" class="checkout px-5 py-2" style="max-width:500px">
@@ -114,7 +114,7 @@
         <form id="paymentForm">
             <div id="card-errors"></div>
             <div class="row g-4 text-center align-items-center justify-content-center pt-4">
-                <button type="submit" class="btn border-secondary py-3 px-4 text-uppercase w-100 text-primary">Place Order</button>
+                <button type="submit" class="btn border-secondary py-3 px-4 text-uppercase text-primary w-50">Place Order</button>
             </div>
         </form>
     </div>
@@ -139,6 +139,13 @@
                 elements,
                 confirmParams: {
                     return_url: 'https://localhost:7169/order/successpayment',
+                    payment_method_data: {
+                        billing_details: {
+                            name: '@Html.Raw(@Model.CurrentUser.FullName)',
+                            email: '@Model.CurrentUser.Email',
+                            phone: '@Model.CurrentUser.PhoneNumber'
+                        }
+                    },
                 },
             })
                 .then((result) => {
